# xdf4mnei

./: readme.MD  setup.cfg  xdf.py
src/xdf4mne/: xdf.py
