[metadata]
name = xdf4mne
version = 0.0.1
description = Load XDF files into MNE
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = xdf, mne
license = CC copyleft
classifiers =
    Framework :: Django
    License :: CC
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
scripts =
install_requires = mne, pyxdf


[options.entry_points]
console_scripts =
    executable-name = package.module:function

[options.packages.find]
where=src

